Add rcee.baseurl in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=ApiServer
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
+rcee.baseurl=${RCEE_BASEURL}
 #spring.config.import=optional:secrets.properties
